# gpu-media-stack

./: .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  README.md  compose.yml
agent-proxmox/: .gitignore  Dockerfile  README.md  app.py  requirements.txt
helper-scripts/: create_gitlab_issues.py  print_chat_history.py
mcp-proxmox/: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
mcp-proxmox/client/: Modelfile  ask-proxmox-ui.py  ask-proxmox-v2.py
mcp-proxmox/src/: main.py  proxmox_client.py  schemas.py
mcp-proxmox/tests/: test_main.py
