[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxmox-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for Proxmox VE infrastructure"
authors = []
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
fastapi = ">=0.68.0"
uvicorn = ">=0.15.0"
proxmoxer = ">=2.0.1"
requests = ">=2.26.0"
python-dotenv = ">=0.19.0"
pydantic = ">=1.8.2"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.24.0",
    "flake8>=7.0.0",
    "black>=24.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
